[tool.poetry]
name = "kcc3"
version = "0.1.0"
description = ""
authors = ["Mateusz Maćkowski <m4tx@m4tx.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "5.6.2"
django = "5.2.10"
django-celery-beat = "2.8.1"
django-hosts = "7.0.0"
djangorestframework = "3.16.1"
gunicorn = "25.0.0"
pillow = "12.1.0"
psycopg2-binary = "2.9.11"
pytz = "2025.2"
requests = "2.32.5"
sqlparse = "0.5.5"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "*/migrations"
]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "G",
  "I",
  "PIE",
  "RUF",
  "UP",
  "W",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
